--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             const messages = [
                 "damn... the wait continues 💔",
                 "she's still out there somewhere...",
-                "keep your eyes open king",
+                "wala zoona",
                 "not today huh",
                 "maybe she's married 💔"
             ];
@@ -381,3 +381,4 @@
     </script>
 </body>
 </html>
+
